--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -21,6 +21,7 @@ name: Temp Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: 'ajs-demoapp-service'  # set this to the name of your Azure Web App
+  AZURE_PROD_WEBAPP_NAME: 'ajs-demoapp-service-prod'  # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: '.'            # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '9.0.*'                   # set this to the .NET Core version to use
 
@@ -64,7 +65,7 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy-staging:
     permissions:
       contents: none
     runs-on: ubuntu-latest
@@ -79,10 +80,33 @@ jobs:
         with:
           name: .net-app
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App - Staging
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+  deploy-production:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: deploy-staging
+    environment:
+      name: 'Prod'
+      url: ${{ steps.deploy-to-prod.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+
+      - name: Deploy to Azure Web App - Production
+        id: deploy-to-prod
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_PROD_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PROD_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
