--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: 'ajs-app-service' # Replace with your app name
+  AZURE_STAGING_PUBLISH_PROFILE: 'ajs-demoapp-service-staging'   # Staging URL.
   AZURE_WEBAPP_PACKAGE_PATH: '.' # Set this to the path to your web app project
   DOTNET_VERSION: '9.0.*' # Set this to the .NET Core version to use
 
@@ -27,5 +28,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.AZURE_STAGING_PUBLISH_PROFILE }}
           package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
