--- a/.github/workflows/slot.yaml
+++ b/.github/workflows/slot.yaml
@@ -65,8 +65,8 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-#          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          app-name: ${{ env.AZURE_STAGING_WEBAPP_NAME }}		  
-#          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          publish-profile: ${{ secrets.AZURE_STAGING_PUBLISH_PROFILE }}		  
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+#          app-name: ${{ env.AZURE_STAGING_WEBAPP_NAME }}		  
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#          publish-profile: ${{ secrets.AZURE_STAGING_PUBLISH_PROFILE }}		  
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
