--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -17,7 +17,7 @@
 # For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
 
-name: Temp Build and deploy ASP.Net Core app to an Azure Web App
+name: Muit-stage Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: 'ajs-demoapp-service'  # set this to the name of your Azure Web App
