--- a/.github/workflows/slot.yaml
+++ b/.github/workflows/slot.yaml
@@ -68,4 +68,5 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
 #          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           publish-profile: ${{ secrets.AZURE_STAGING_PUBLISH_PROFILE }}
+          slot-name: "${{ secrets.SLOT_NAME }}"
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
